@@ -56,6 +56,10 @@ bzr development version
       that can become out of sync in pre 0.8 formats. (Robert Collins,
       Aaron Bentley)
 
+    * New 'bzr init --format' and 'bzr upgrade --format' option to control 
+      what storage format is created or produced.  (Robert Collins, 
+      Martin Pool)
+
   INTERNALS:
   
     * The internal storage of history, and logical branch identity have now
